# sightline-redesign

./: CMakeLists.txt  README.md  build_mingw.bat  build_msvc.bat
.github/workflows/: build.yml
src/: font_cousine.h  font_electrolize.h  font_icons.h  font_proggy.h  logo_sprite.cpp  logo_sprite.h  main.cpp  main_video_patch.md  player_hooks.md  sightline.rc  video_player.cpp  video_player.h  ytdlp_check.cpp  ytdlp_check.h
